// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render as a button 1`] = `
<div>
  <a
    class="css-drk5ds"
    href="#"
  >
    example
  </a>
</div>
`;

exports[`Link should render as default 1`] = `
<div>
  <a
    class="css-u6qrp8"
    href="#"
  >
    example
  </a>
</div>
`;
